# soundbytes

./: .gitignore  Cargo.toml  README.md
src/: bass.sb  main.rs  play.rs  test.sb
src/interpreter/: ast.rs  builtin.rs  eval.rs  lexer.rs  mod.rs  object.rs  parser.rs  repl.rs  token.rs
src/player/: clamp.rs  effect.rs  instrument.rs  mod.rs  oscillator.rs  play.rs  song.rs  sound.rs  tempo.rs
test/: mario.sb  test.sb  test1.sb  test_plus_for_notes.sb  vibrato.sb  yngwie_trilogy.sb
