[package]
name = "soundbytes"
version = "0.1.0"
authors = ["Petar Dambovaliev <petar.atanasov.1987@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
cpal = "0.12.1"
lazy_static = "1.4.0"
crossbeam-channel = "0.4.3"
log = "0.4"
env_logger = "0.7.1"
